# semeval-task5-flanT5

./: .gitignore  README.md  launcher.ipynb  pyproject.toml  requirements.txt  setup_repo.py
config/: config.yaml
scripts/: predict.py  train.py
src/: __init__.py  data_utils.py  inference_utils.py  model_utils.py  trainer_utils.py
