[project]
name = "semeval-task5-flant5"
version = "0.1.0"
description = ""
authors = [
    {name = "Emanuele Pietro Cometti",email = "emanuelecometti@hotmail.it"}
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch (>=2.10.0,<3.0.0)",
    "transformers (>=5.0.0,<6.0.0)",
    "datasets (>=4.5.0,<5.0.0)",
    "accelerate (>=1.12.0,<2.0.0)",
    "peft (>=0.18.1,<0.19.0)",
    "scipy (>=1.17.0,<2.0.0)",
    "numpy (>=2.4.1,<3.0.0)",
    "wandb (>=0.24.0,<0.25.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.1.0,<8.0.0)"
]
